# GORP

./: .gitattributes  .gitignore  CMakeLists.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  misc.md
.github/workflows/: build_test.yml  pull_request.yml
docs/: CONTRIBUTING.md  README.md  SECURITY.md  building.md  license.txt
gamedata/: gorp.yml
gamedata/misc/: sam.yml  shader.glsl
gamedata/shader/: shader.glsl  uniforms.yml
lib/windows/: README.txt
linux/lib/: README.txt
optional/: README.txt
optional/windows-wsl-vscode/: README.txt
src/: CMakeLists.txt  main.cpp
src/cmake/: resource.rc.in  source.hpp.in  version.hpp.in
src/core/: core.cpp  core.hpp  game.cpp  game.hpp  global.hpp  guru.cpp  guru.hpp  prefs.cpp  prefs.hpp
src/core/audio/: oggmusic.cpp  oggmusic.hpp  oggsound.cpp  oggsound.hpp  sfxr.cpp  sfxr.hpp
src/core/global/: enums.hpp  global-includes.hpp  guru-exception.hpp  vector2.hpp
src/core/terminal/: terminal.cpp  terminal.hpp  window.cpp  window.hpp
src/procgen/: island.cpp  island.hpp
src/ui/: dev-canvas.cpp  dev-canvas.hpp  element.cpp  element.hpp  input.cpp  input.hpp  messagelog.cpp  messagelog.hpp  title.cpp  title.hpp
src/util/: stringutils.cpp  stringutils.hpp
src/util/file/: binpath.cpp  binpath.hpp  filereader.cpp  filereader.hpp  fileutils.cpp  fileutils.hpp  filewriter.cpp  filewriter.hpp  yaml.cpp  yaml.hpp
src/util/math/: mathutils.cpp  mathutils.hpp  random.hpp
src/util/system/: process.cpp  process.hpp  winver.cpp  winver.hpp
src/util/text/: namegen.cpp  namegen.hpp  stringutils.cpp  stringutils.hpp
src/world/: codex.cpp
windows/dll/: README.txt
windows/lib/: README.txt
